projects/overlays/dev/acme-nuxeo23/02-api-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxeo-api-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: nuxeo-api     
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "2Gi"
