projects/overlays/dev/acme-nuxeo23/03-worker-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxeo-worker-deployment
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: nuxeo-worker
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "2Gi"
