projects/overlays/dev/acme-nuxeo23/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nuxeo-ingress
  namespace: acme-nuxeo23
  annotations:
    cert-manager.io/cluster-issuer: $(CLUSTER_ISSUER)
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - $(ACME23_HOST)
    secretName: acme23-tls
  rules:
  - host: $(ACME23_HOST)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nuxeo-service
            port:
              number: 9080
